--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -70,12 +70,13 @@
   "the Investor Dashboard": "the Investor Dashboard",
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.",
   "Illustrations by": "Illustrations by",
-  "Build trust<0/>in your cap table": "Build trust<0/>in your cap table",
+  "Build trust in your cap table": "Build trust in your cap table",
   "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.",
   "See the demo": "See the demo",
   "Get Started": "Get Started",
   "Screenshot of the Ledgy app": "Screenshot of the Ledgy app",
   "You’re in good company": "You’re in good company",
+  "Many successful companies already use Ledgy to keep track of their share register.": "Many successful companies already use Ledgy to keep track of their share register.",
   "Find out why they trust us": "Find out why they trust us",
   "Investors love to track the progress of their companies. Help them to be excited about what you have achieved.": "Investors love to track the progress of their companies. Help them to be excited about what you have achieved.",
   "Your portfolio at a glance": "Your portfolio at a glance",
