--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -7,9 +7,9 @@
   "Space elevator": "Weltraumlift",
   "Team": "Team",
   "Computer vision background, badminton guy, wants to build a space elevator": "Computer Vision Hintergrund, Badminton-Typ, will einen Weltraumlift bauen",
-  "Battery science background, martial arts, fascinated by electric cars": "Batteriewissenschaftshintergrund, Kampfkünste, fasziniert von Elektroautos",
+  "Battery science background, martial arts, fascinated by electric cars": "Hintergrund in Batteriewissenschaften, Martial Arts, fasziniert von Elektroautos",
   "Medical physics background, loves running, wondering about brain–machine interfaces": "Medical Physics-Hintergrund, liebt das Laufen und denkt über Brain-Machine Interfaces nach",
-  "Backed by some really cool investors": "Unterstützt von einigen wirklich coolen Investoren",
+  "Backed by some really cool investors": "Unterstützt von wirklich coolen Investoren",
   "Entrepreneur, Business Angel, Founder of Doodle.com": "Unternehmer, Business Angel, Gründer von Doodle.com",
   "Entrepreneur, Technologist, Founder of Doodle.com": "Unternehmer, Technologe, Gründer von Doodle.com",
   "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala": "Gründer von Meisser Economics, Bitcoin Association Schweiz und Wuala",
@@ -40,9 +40,9 @@
   "Send enquiry": "Abschicken",
   "Give us a call or stop by our door anytime. We will do our best to answer all enquiries within 24 hours on business days.": "Ruf an oder komm vorbei. Falls du uns nicht erreichst, werden wir uns so schnell wie möglich bei dir melden.",
   "8008 Zurich, Switzerland": "8008 Zürich, Schweiz",
-  "ESOP": "Mitarbeiterbeteiligungsplan",
+  "ESOP": "Mitarbeiterbeteiligung",
   "Keep your employees motivated at work. They deserve it. Ledgy's ESOP module will help you to make it happen.": "Motiviere deine Mitarbeiter bei der Arbeit. Sie verdienen es. Das ESOP-Modul von Ledgy wird dir dabei helfen.",
-  "Employee Stock Ownership Plans": "Mitarbeiterbeteiligungspläne",
+  "Employee Stock Ownership Plans": "Mitarbeiterbeteiligung",
   "Make your employees happy": "Mach deine Mitarbeiter glücklich",
   "You’re building a fast growing company and want your valuable employees to be part of your success? Ledgy offers you a powerful module to manage your employee stock ownership plans. No matter if you transfer real stock from your company to an employee, options from a fixed-size pool or even phantom stock.<0/><1/>Add a vesting schedule to your ESOPs and track their status in real-time. Coolest thing ever, let your employees log into Ledgy and allow them to see at any point in time how much stock they have already vested and how many shares are still outstanding.<2/><3/>Go to your <4>Transactions</4> page and click the <5>Add incentive</5> button to get started.": "Du baust ein schnell wachsendes Unternehmen auf und möchtest, dass deine Mitarbeiter Teil des Erfolges sind? Ledgy bietet dir ein leistungsfähiges Modul zur Verwaltung deiner Mitarbeiterbeteiligungspläne. Egal ob du Aktien deines Unternehmens an einen Mitarbeiter, Optionen aus einem Pool mit fester Größe oder sogar Phantom-Aktien übertragen willst. <0/><1/>Füge Vesting zu deinen ESOPs hinzu und verfolge deren Status in Echtzeit. Das beste daran: Deine Mitarbeiter können sich bei Ledgy einloggen und sehen zu jedem Zeitpunkt, wie viele Aktien sie bereits besitzen und wie viele ihnen zugeteilt sind. <2/><3/>Leg’ los, indem du auf die <4>Transactions</4>-Seite gehst und dort <5>Add Incentive</5> auswählst.",
   "Add incentive plan": "Beteiligungsplan hinzufügen",
@@ -56,14 +56,14 @@
   "ESOPs in the employee dashboard": "ESOPs im Mitarbeiter-Dashboard",
   "Read More about": "Mehr über",
   "Discover more about Ledgy": "Erfahre mehr über Ledgy",
-  "Round Modeling": "Modellierung von Finanzierungsrunden",
-  "Reporting": "Berichte",
+  "Round Modeling": "Round Modeling",
+  "Reporting": "Reporting",
   "Investors": "Investoren",
-  "Manage your shares.<0/>Not your Excel.": "Verwalten deine Shares. <0/> Nicht dein Excel.",
+  "Manage your shares.<0/>Not your Excel.": "Verwalte deine Aktien. <0/> Nicht dein Excel.",
   "Guaranteed Error-Free": "Garantiert fehlerfrei",
   "Did you know that many share registers are incomplete or contain errors? Building a share register with Excel or Word can easily lead to inconsistencies. Set up your shares with Ledgy and be sure that all data is consistent at any time.": "Wusstest du, dass viele Aktienregister unvollständig sind oder sogar Fehler enthalten? Das Erstellen eines Aktienregisters mit Excel oder Word kann leicht zu Inkonsistenzen führen. Trage deine Aktien in Ledgy ein und stelle sicher, dass alle Daten jederzeit korrekt sind.",
   "Financing Round Modeling": "Modellierung von Finanzierungsrunden",
-  "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and increasing the ESOP pool?<0/>Honestly, we don’t know. But Ledgy does.": "Wie hoch ist der prozentuale Anteil der Gründer, nachdem ein VC 2.000.000 € zu einer Bewertung von 7.500.000 € investiert hat, unter Berücksichtigung der 2 ausstehenden Wandeldarlehen und Erhöhung des ESOP-Pools? <0/> Ehrlich gesagt, wissen wir nicht. Aber Ledgy tut es.",
+  "What’s the stake percentage of the founders after a VC invests $2,000,000 at a valuation of $7,500,000 taking into account the 2 outstanding convertible loans and increasing the ESOP pool?<0/>Honestly, we don’t know. But Ledgy does.": "Wie hoch ist der prozentuale Anteil der Gründer, nachdem ein VC 2.000.000 € zu einer Bewertung von 7.500.000 € investiert hat, unter Berücksichtigung der 2 ausstehenden Wandeldarlehen und Erhöhung des ESOP-Pools? <0/> Ehrlich gesagt, wissen wir nicht. Aber Ledgy schon.",
   "Let your employees be part of your company’s success. Ledgy supports vested stock, options, inverse vesting, ESOP pools, and much more.<0/>Employees can even log into Ledgy and track their vested shares in real-time.": "Lass die Mitarbeiter am Erfolg des Unternehmens teilhaben. Ledgy unterstützt gevestete Aktien, Optionen, inverses Vesting, ESOP-Pools und vieles mehr. <0/> Mitarbeiter können sich jederzeit bei Ledgy anmelden und ihre erworbenen Aktien in Echtzeit verfolgen.",
   "Reporting & Documents": "Berichte und Dokumente",
   "Oh, it’s tax season again and there are 50 holding confirmations waiting to be sent to your shareholders. This means pasting names into document templates, computing the tax value of all shares… <0/>Don’t worry. Generate and send all important documents with a single click on Ledgy.": "Oje, es ist wieder Zeit Steuererklärungen auszufüllen und es gibt 50 Besitzbestätigungen, die darauf warten, an den Aktionäre versandt zu werden. Das bedeutet, Namen in Dokumentvorlagen einfügen, den Steuerwert aller Anteile berechnen... <0/> Mach dir keine Sorgen. Generiere und sende alle wichtigen Dokumente mit einem einzigen Klick auf Ledgy.",
@@ -72,13 +72,13 @@
   "You are an investor and want to track your portfolio companies? The founders are busy and the numbers they give you are different from your own records?<0/>With their share register on Ledgy, there’s only a single source of truth. Convince your companies and you will never miss anything regarding your investments.": "Du bist Investor und möchtest einen Überblick über die Eckdaten deiner Portfoliounternehmen? Die Gründer sind zu beschäftigt und die Zahlen, die sie dir geben, unterscheiden sich von deinen eigenen Aufzeichnungen? <0/> Mit deinem Aktienregister auf Ledgy gibt es nur noch eine einzige “Single Source of Truth”. Überzeuge deine Unternehmen und du wirst keine Informationen über deine Investitionen mehr verpassen.",
   "Illustrations by": "Illustrationen von",
   "Build trust in your cap table": "Schaffe Vertrauen in deinen Cap Table",
-  "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien zu verfolgen, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und überprüfe den Status deines Vestings.",
+  "Use Ledgy to track all your shares, manage your ESOPs and model detailed financing rounds.<0/><1/>You are an investor or employee? Get a detailed overview of your investment and check the status of your vesting schedule.": "Verwende Ledgy, um deine Aktien im Griff zu haben, verwalte ESOPs und modelliere detaillierte Finanzierungsrunden. <0/> <1/> Du bist Investor oder Angestellter? Erhalte einen detaillierten Überblick über deine Investitionen und bleib’ bei deinem Vesting auf dem Laufenden.",
   "See the demo": "Teste die Demo",
   "Get Started": "Los geht’s",
   "Screenshot of the Ledgy app": "Screenshot der Ledgy-App",
   "You’re in good company": "Du befindest dich in guter Gesellschaft",
   "Many successful companies already use Ledgy to keep track of their share register.": "Viele erfolgreiche Unternehmen nutzen bereits Ledgy, um ihr Aktienregister zu verwalten.",
-  "Find out why they trust us": "Finde heraus, warum sie uns vertrauen",
+  "Find out why they trust us": "Warum sie uns vertrauen",
   "Investors love to track the progress of their companies. Help them to be excited about what you have achieved.": "Investoren lieben es, den Fortschritt ihrer Unternehmen zu verfolgen. Hilf ihnen, sich auf das zu freuen, was du erreicht hast.",
   "Your portfolio at a glance": "Dein Portfolio auf einen Blick",
   "As an investor you can profit a lot from Ledgy. Any of your portfolio companies that uses the platform will appear in your investment dashboard. See your key performance indicators of your investments at a glance.<0/><1/>Never lose track about how much you invested in which company and what’s the approximate value of your investments today.": "Als Investor kannst du sehr stark von Ledgy profitieren. Alle deine Portfoliounternehmen, die unsere Plattform verwenden, werden in deinem Investment-Dashboard angezeigt. Dort hast du die wichtigsten Leistungsindikatoren deiner Investments auf einen Blick. <0/> <1/> Verliere nie mehr den Überblick darüber, wie viel du in welches Unternehmen investiert hast und wie viel deine Investments heute wert sind.",
