--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,4 +1,5 @@
 {
+  "Product": "Produkt",
   "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.": "Sobald deine ESOPs bei Ledgy eingetragen sind, ist es an der Zeit, deine Mitarbeiter zu aktivieren. Sie können sich jederzeit mit ihrer E-Mail-Adresse selbst bei Ledgy einloggen und sehen, wie viele Aktien sie schon gevested haben.",
   "About us": "Über uns",
   "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.": "Lerne die drei Leute kennen, die sich zum Ziel gesetzt haben, ein großartiges Produkt zu bauen. Und erfahre mehr über die Menschen, die uns vertrauen.",
