--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,4 +1,5 @@
 {
+  "Product": "Product",
   "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.": "Once your incentives are submitted to Ledgy it’s time to engage your employees. They are able to log into Ledgy themselves with their email address at any time and see how many shares they have already vested.",
   "About us": "About us",
   "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.": "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.",
