--- a/src/locale/de/messages.json
+++ b/src/locale/de/messages.json
@@ -1,6 +1,6 @@
 {
   "About us": "Über uns",
-  "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.": "Lerne die drei Leute kennen, die sich zum Ziel gesetzt haben, ein großartiges Produkt zu bauen. Und erfahre mehr über die Menschen, die uns vertrauen.",
+  "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Lerne das Team hinter Ledgy kennen, welches dieses geniale Produkt entwickelt hat. Erfahre mehr über die Leute, die uns Vertrauen.",
   "Our mission": "Unsere Mission",
   "We want to empower entrepreneurs. They should be able to focus on their business, not on bureaucratic paperwork. This is why we want to establish a new, state-of-the-art tool to manage, exchange, and trade securities in private companies. Our goal is to make shares management a breeze for both companies and shareholders.": "Wir wollen Unternehmer stärken. Sie sollten sich auf ihr Geschäft konzentrieren können, nicht auf bürokratischen Papierkram. Aus diesem Grund möchten wir ein neues, hochmodernes Tool für die Verwaltung, den Austausch und den Handel von Wertpapieren in privaten Unternehmen schaffen. Unser Ziel ist es, das Aktienmanagement für Unternehmen und Aktionäre zu einem Kinderspiel zu machen.",
   "Space elevator": "Weltraumlift",
@@ -118,6 +118,6 @@
   "Sign in": "Anmelden",
   "Company": "Firma",
   "Product": "Produkt",
-  "Manage your cap table with Ledgy. The single place to track all your shares, manage your ESOPs and model detailed financing rounds.": "Verwalte deinen Cap Table mit Ledgy. Der einzige Ort, um alle deine Aktien zu verfolgen, deine ESOPs zu verwalten und detaillierte Finanzierungsrunden zu modellieren.",
+  "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Verwalte deinen Cap Table, nicht dein Excel. Ledgy ist der perfekte Ort, an dem du den Verlauf deiner Aktien verfolgen, deine ESOPs verwalten, und die nächste Finanzierungsrunde simulieren kannst. Genieße ein garantiert fehlerloses Aktienregister und motiviere deine Mitarbeiter und Investoren. Jetzt Gratis Testen!",
   "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors": "Cap Table, Aktienregister, Startup, Modellierung von Finanzierungsrunden, Aktien, esop, Reporting, Investoren"
 }
