--- a/src/locale/en/messages.json
+++ b/src/locale/en/messages.json
@@ -1,6 +1,6 @@
 {
   "About us": "About us",
-  "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.": "Meet the three random folks who went out to build truly a great product. And learn more about the people who trust in us.",
+  "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.": "Meet the team behind Ledgy that went out to build truly a great product. Learn more about the people who trust in us.",
   "Our mission": "Our mission",
   "We want to empower entrepreneurs. They should be able to focus on their business, not on bureaucratic paperwork. This is why we want to establish a new, state-of-the-art tool to manage, exchange, and trade securities in private companies. Our goal is to make shares management a breeze for both companies and shareholders.": "We want to empower entrepreneurs. They should be able to focus on their business, not on bureaucratic paperwork. This is why we want to establish a new, state-of-the-art tool to manage, exchange, and trade securities in private companies. Our goal is to make shares management a breeze for both companies and shareholders.",
   "Space elevator": "Space elevator",
@@ -118,6 +118,6 @@
   "Sign in": "Sign in",
   "Company": "Company",
   "Product": "Product",
-  "Manage your cap table with Ledgy. The single place to track all your shares, manage your ESOPs and model detailed financing rounds.": "Manage your cap table with Ledgy. The single place to track all your shares, manage your ESOPs and model detailed financing rounds.",
+  "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!": "Manage your Cap Table, not your Excel! Ledgy is the single place to track the complete history of your shares, manage your ESOPs and model detailed financing rounds. Enjoy a guaranteed error-free cap table and engage your investors and employees. Try Now For Free!",
   "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors": "cap table, stock ledger, share register, startup, round modeling, equity, esop, reporting, investors"
 }
